--- a/test_script/test_performance.ipynb
+++ b/test_script/test_performance.ipynb
@@ -6,137 +6,72 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "No module named torch",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/lancelcy/PRIORI/X_R21.pk'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-d4012279c028>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named torch"
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-d4012279c028>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-d4012279c028>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/home/lancelcy/PRIORI/X_R21.pk\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0mX_R21\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/home/lancelcy/PRIORI/Y_R21.pk\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/lancelcy/PRIORI/X_R21.pk'"
      ]
     }
    ],
    "source": [
-    "import pickle\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import sklearn.metrics as metrics\n",
-    "from model import * \n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "def main():\n",
-    "    with open(\"/home/lancelcy/PRIORI/X_R21.pk\",\"rb\") as f:\n",
-    "    \tX_R21=pickle.load(f)\n",
-    "    with open(\"/home/lancelcy/PRIORI/Y_R21.pk\",\"rb\") as f:\n",
-    "    \tY_R21=pickle.load(f)\n",
-    "\n",
-    "    df=pd.read_csv(\"/home/lancelcy/my_env/split_data.csv\")\n",
-    "    # df_R21=pd.read_csv(\"/home/lancelcy/PRIORI/R21.csv\")\n",
-    "\n",
-    "    # s1=np.array(df_R21[df_R21[\"sub_id\"].apply(lambda x:int(x) == 1830001, 2541001,5885001))].index)\n",
-    "    # no_control=np.array(df_R21[df_R21[\"sub_id\"].apply(lambda x:int(x) not in (1830001, 2541001,5885001))].index)\n",
-    "    X=np.split(X_R21,[816,933,1123,1169,2477,2843,3838,3957])\n",
-    "    Y=np.split(Y_R21,[816,933,1123,1169,2477,2843,3838,3957])\n",
-    "\n",
+    "for i in range(1,3):\n",
+    "#     accuracy_R21=np.load(f\"/home/lancelcy/PRIORI/prediction/trial{i}/accuracy.npy\")\n",
+    "    UAR_R21=np.load(f\"/home/lancelcy/PRIORI/test_result/baseline/trial{i}/UAR.npy\")\n",
+    "#     accuracy_V1=np.load(f\"/home/lancelcy/PRIORI/prediction/trial{i}/accuracy_V1.npy\")\n",
+    "    UAR_V1=np.load(f\"/home/lancelcy/PRIORI/test_result/baseline/trial{i}/UAR_V1.npy\")\n",
+    "    print(f\"Trial {i}\")\n",
+    "    print(\"V1 UAR=\",np.mean(UAR_V1,axis=0))\n",
+    "    print(\"R21 UAR\")\n",
+    "    for i in range(len(file[\"sub_id\"].unique())):\n",
+    "        print(file[\"sub_id\"].unique()[i],\":\",np.mean(UAR_R21,axis=1)[i])\n",
     "    \n",
-    "    dic=torch.load(\"/home/lancelcy/PRIORI/CNN_models/1.checkpoint\",map_location=\"cpu\")\n",
-    "    model = Net()\n",
-    "    model.load_state_dict(dic)\n",
-    "    # with torch.no_grad():\n",
-    "    #     Y_out=model(torch.from_numpy(X_test)).numpy()\n",
-    "\n",
-    "\n",
-    "    #     model_test=model.cpu()\n",
-    "    #     print(model)\n",
-    "    #     print(X_test.shape)\n",
-    "\n",
-    "    #     model_test=model.cpu()\n",
-    "    # with torch.no_grad():\n",
-    "        # Y_out=model(torch.from_numpy(X_test)).numpy()\n",
-    "        # Y_pred=np.zeros(Y_test.shape[0])\n",
-    "        # for i, pred in enumerate(Y_out):\n",
-    "            # Y_pred[i]=np.argmax(pred)\n",
-    "        # test1_accuracy.append(metrics.accuracy_score(Y_test,Y_pred))\n",
-    "        # test1_UAR.append(metrics.recall_score(Y_test,Y_pred,average=\"macro\"))\n",
-    "        # print(\"V1 Test\",metrics.recall_score(Y_test,Y_pred,average=\"macro\"))\n",
-    "    accuracy=[]\n",
-    "    UAR=[]\n",
-    "    for x,y in zip(X,Y):\n",
-    "        with torch.no_grad():\n",
-    "            Y_out=model(torch.from_numpy(x)).numpy()\n",
-    "            # print(Y_out.shape)\n",
-    "        Y_pred=np.zeros(y.shape[0])\n",
-    "        for i, pred in enumerate(Y_out):\n",
-    "            Y_pred[i]=np.argmax(pred)\n",
-    "        # test2_accuracy.append(metrics.accuracy_score(Y_R21,Y_pred))\n",
-    "        # test2_UAR.append(metrics.recall_score(Y_R21,Y_pred,average=\"macro\"))\n",
-    "        # print(\"R21 UAR\",metrics.recall_score(y,Y_pred,average=\"macro\"))\n",
-    "        accuracy.append(metrics.accuracy_score(y,Y_pred))\n",
-    "        UAR.append(metrics.recall_score(y,Y_pred,average=\"macro\"))\n",
-    "    print(accuracy)\n",
-    "    print(UAR)\n",
-    "    plt.plot(accuracy)\n",
-    "    plt.plot(UAR)\n",
-    "    \n",
-    "    # with torch.no_grad():\n",
-    "        # Y_control_out=model(torch.from_numpy(control_X)).numpy()\n",
-    "            # print(Y_out.shape)\n",
-    "        # Y_pred=np.zeros(Y_control_out.shape[0])\n",
-    "        # for i, pred in enumerate(Y_control_out):\n",
-    "            # Y_pred[i]=np.argmax(pred)\n",
-    "        # control_accuracy.append(metrics.accuracy_score(control_Y,Y_pred))\n",
-    "        # control_UAR.append(metrics.recall_score(control_Y,Y_pred,average=\"macro\"))\n",
-    "        # print(\"R21 control UAR\",metrics.recall_score(control_Y,Y_pred,average=\"macro\"))\n",
-    "\n",
-    "    # np.save(\"/home/lancelcy/PRIORI/test_0402/test1_accuracy.npy\",test1_accuracy)\n",
-    "    # np.save(\"/home/lancelcy/PRIORI/test_0402/test1_UAR.npy\",test1_UAR)\n",
-    "    # np.save(\"/home/lancelcy/PRIORI/test_0402/test2_accuracy.npy\",test2_accuracy)\n",
-    "    # np.save(\"/home/lancelcy/PRIORI/test_0402/test2_UAR.npy\",test2_UAR)\n",
-    "    # np.save(\"/home/lancelcy/PRIORI/test_0402/control_accuracy.npy\",control_accuracy)\n",
-    "    # np.save(\"/home/lancelcy/PRIORI/test_0402/control_UAR.npy\",control_UAR)\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\": \n",
-    "    main()\n"
+    "    print(\"-------------------------\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "# sys.path.append(\"/home/lancelcy/.local/lib/python3.6/site-packages\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['', '/home/lancelcy/my_env/lib/python2.7', '/home/lancelcy/my_env/lib/python2.7/plat-x86_64-linux-gnu', '/home/lancelcy/my_env/lib/python2.7/lib-tk', '/home/lancelcy/my_env/lib/python2.7/lib-old', '/home/lancelcy/my_env/lib/python2.7/lib-dynload', '/usr/lib/python2.7', '/usr/lib/python2.7/plat-x86_64-linux-gnu', '/usr/lib/python2.7/lib-tk', '/home/lancelcy/my_env/local/lib/python2.7/site-packages', '/home/lancelcy/my_env/lib/python2.7/site-packages', '/home/lancelcy/my_env/local/lib/python2.7/site-packages/IPython/extensions', '/home/lancelcy/.ipython']\n"
+      "[   0    1    2 ... 2272 2273 2274]\n"
      ]
     }
    ],
    "source": [
-    "print(sys.path)"
+    "idx=pd.read_csv(\"/home/lancelcy/PRIORI/metadata/R21_v1.csv\").index\n",
+    "print(idx.to_numpy())\n",
+    "# with open(\"/home/lancelcy/PRIORI/data/X_R21.pk\",\"rb\") as f:\n",
+    "#     X=np.take(pickle.load(f),idx,axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 816,  817,  818, ..., 4033, 4034, 4035])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(pd.read_csv(\"/home/lancelcy/PRIORI/metadata/R21_v1.csv\").iloc[:,0])"
    ]
   },
   {
